Add wrapper class

--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,13 @@ img {
   padding-bottom: 50px;
 }
 
+section {
+  margin-bottom: 70px;
+}
+
+.wrapper {
+  margin-left: 14%;
+}
 
 
 
@@ -87,14 +94,27 @@ header {
   font-size: 1.125rem;
 }
 
+
+
+
 .home-content {
   position: relative;
-  height: 600px;
+  height: 670px;
 }
 
 .home-content h2 {
   font-size: 3rem;
   position: absolute;
   bottom: 0;
-  margin-left: 14%;
+}
+
+
+
+
+
+
+/* contact */
+
+#contact {
+  text-align: center;
 }
