--- a/css/styles.css
+++ b/css/styles.css
@@ -60,6 +60,7 @@ img {
 /* common  */
 
 .title {
+  position: relative;
   margin-top: 200px;
   padding-bottom: 50px;
 }
@@ -80,7 +81,21 @@ section {
   margin-left: 14%;
 }
 
+.kasane {
+  position: absolute;
+  top: 0;
+  opacity: 0.5;
+}
 
+.content {
+  margin-right: 40px;
+  transition: 0.2s;
+}
+
+.content:hover {
+  transform: scale(1.1);
+  opacity: 0.8;
+}
 
 
 
@@ -186,6 +201,9 @@ header {
   display: flex;
 }
 
+.service-content {
+  margin-right: 10px;
+}
 
 
 
