--- a/css/styles.css
+++ b/css/styles.css
@@ -72,11 +72,16 @@ img {
 }
 
 .title h2 {
-  font-size: 2.25rem;
+  font-size: 4rem;
+  color: #444;
 }
 
 .title p {
   font-size: 18rem;
+}
+
+.title p:nth-child(2) {
+  font-size: 12rem;
 }
 
 section {
@@ -84,7 +89,7 @@ section {
 }
 
 .home-wrapper {
-  margin-left: 14%;
+  margin-left: 13%;
 }
 
 .kasane {
@@ -101,6 +106,18 @@ section {
 .content:hover {
   transform: scale(1.1);
   opacity: 0.8;
+}
+
+.content h3 {
+  font-size: 1.375rem;
+  margin-top: 10px;
+  color: #444;
+}
+
+.content p {
+  font-size: 1rem;
+  margin-top: 7px;
+  color: #777;
 }
 
 
@@ -187,7 +204,7 @@ header {
 /* news */
 
 .news-wrapper {
-  margin-left: 14%;
+  margin-left: 13%;
   z-index: 2;
 }
 
@@ -200,6 +217,16 @@ header {
   display: flex;
   background-color: #E6E6E6;
   padding: 40px;
+  color: #444;
+}
+
+.news-content-one {
+  margin-left: 40px;
+}
+
+.news-content {
+  margin-left: 40px;
+  padding-bottom: 20px; 
 }
 
 
@@ -215,7 +242,7 @@ header {
 /* blog */
 
 .blog-wrapper {
-  margin-left: 14%;
+  margin-left: 13%;
   z-index: 2;
 }
 
@@ -228,6 +255,7 @@ header {
   display: flex;
   background-color: #E6E6E6;
   padding: 40px;
+  color: #444;
 }
 
 
@@ -242,9 +270,10 @@ header {
 /* our service */
 
 .service-wrapper {
-  padding-left: 14%;
+  padding-left: 13%;
   /* background-color: #E6E6E6; */
   z-index: 2;
+  /* margin-left: 13%; */
 }
 
 .service-title {
@@ -256,6 +285,7 @@ header {
   display: flex;
   background-color: #E6E6E6;
   padding: 40px;
+  color: #444;
 }
 
 .service-content {
