--- a/style.css
+++ b/style.css
@@ -149,15 +149,15 @@ header {
   text-align: center;
 }
 
-.header-logo h1 a {
+.header-logo h1 a .main-logo {
   color: #dd0f0f;
   font-size: 1.75rem;
   transition: 0.3s;
-  line-height: 0.3px;
+  line-height: 28px;
   letter-spacing: 1px;
 }
 
-.header-logo h1 a span {
+.header-logo h1 a .sub-logo {
   color: #3b9ded;
   font-size: 1rem;
   letter-spacing: 4px;
@@ -459,15 +459,23 @@ footer {
 
 
 
-  /*　画面サイズが480pxからはここを読み込む　*/
+  /*　画面サイズが750pxからはここを読み込む　*/
 
-@media screen and (max-width:750px) { 
+@media screen and (max-width:1024px) { 
 
-.header-logo h1 a {
+.title p:nth-child(2) {
+  font-size: 9rem;
+}
+
+.header-logo {
+  margin-top: 5px;
+}
+
+.header-logo h1 a .main-logo {
   font-size: 1.25rem;
 }
 
-.header-logo h1 a span {
+.header-logo h1 a .sub-logo {
   font-size: 0.5rem;
   letter-spacing: 3px;
 }
@@ -492,6 +500,41 @@ footer {
 
 
 
+.news-wrapper {
+  margin-left: 0%;
+}
+
+.news-contents {
+  justify-content: center;
+  align-items: center;
+  flex-flow: wrap;
+}
+
+
+
+.blog-wrapper {
+  margin-left: 0%;
+}
+
+.blog-contents {
+  justify-content: center;
+  align-items: center;
+  flex-flow: wrap;
+}
+
+
+.service-wrapper {
+  padding-left: 0%;
+}
+
+.service-contents {
+  justify-content: center;
+  align-items: center;
+  flex-flow: wrap;
+}
+
+
+
 
 .contact-title h2 {
   font-size: 1.375rem;
@@ -512,5 +555,44 @@ footer {
   height: 27px;
   font-size: 0.75rem;
 }
+
+}
+
+
+
+
+
+
+
+
+
+
+/*　画面サイズが480pxからはここを読み込む　*/
+
+@media screen and (max-width:480px) {
+
+img {
+  width: 350px;
+  height: 210px;
+}
+
+.title {
+  margin-top: 100px;
+}
+
+.title h2 {
+  font-size: 2rem;
+  margin-left: 2.2%;
+}
+
+.title p {
+  font-size: 13px;
+  line-height: 340px;
+}
+
+.title p:nth-child(2) {
+  font-size: 4.2rem;
+}
+
 
 }
