--- a/style.css
+++ b/style.css
@@ -262,6 +262,14 @@ header {
 .slide-button {
   display: flex;
   justify-content: flex-end;
+  margin: 20px;
+}
+
+.slide-button button {
+  margin: 10px;
+  padding: 9px 18px;
+  background-color: #FCEE21;
+  color: #555;
 }
 
 
