--- a/style.css
+++ b/style.css
@@ -157,6 +157,9 @@ nav ul {
   font-size: 0.75rem;
 }
 
+#cover {
+  /* display: none; */
+}
 
 
 
@@ -655,6 +658,19 @@ footer {
 
   .details-button {
     display: block;
+  }
+
+  #cover {
+    display:block;
+    background: #000;
+    opacity: 0.6;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 3;
+    display: none;
   }
 
 
