Add cover design

--- a/style.css
+++ b/style.css
@@ -661,16 +661,14 @@ footer {
   }
 
   #cover {
-    display:block;
-    background: #000;
-    opacity: 0.6;
+    /* background: #000; */
+    /* opacity: 0.5; */
     width: 100%;
     height: 100%;
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 3;
-    display: none;
+    z-index: 10;
   }
 
 
