--- a/style.css
+++ b/style.css
@@ -661,14 +661,45 @@ footer {
   }
 
   #cover {
-    /* background: #000; */
-    /* opacity: 0.5; */
+    background: #000;
+    opacity: 0.5;
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
-    z-index: 10;
+    z-index: 100;
+  }
+
+  #cover .cover-nav {
+    text-align: center;
+    margin-left: 27%;
+    margin-top: 100px;
+    position: absolute;
+
+  }
+
+  #cover .cover-nav p {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 40px;
+    font-size: 2rem;
+    color: #fff;
+  }
+
+  #cover .cover-nav h3 {
+    font-size: 1.25rem;
+    margin-bottom: 17px;
+    color: #fff;
+  }
+
+  #cover .cover-nav nav ul li {
+    padding: 8px;
+  }
+
+  #cover .cover-nav nav ul li a {
+    font-size: 2rem;
+    color: #fff;
   }
 
 
