--- a/style.css
+++ b/style.css
@@ -661,8 +661,8 @@ footer {
   }
 
   #cover {
-    background: #000;
-    opacity: 0.5;
+    /* background: #000; */
+    /* opacity: 0.5; */
     width: 100%;
     height: 100%;
     position: relative;
@@ -672,6 +672,8 @@ footer {
   }
 
   #cover .cover-nav {
+    display: none;
+
     text-align: center;
     margin-left: 27%;
     margin-top: 100px;
