--- a/style.css
+++ b/style.css
@@ -661,8 +661,6 @@ footer {
   }
 
   #cover {
-    /* background: #000; */
-    /* opacity: 0.5; */
     width: 100%;
     height: 100%;
     position: relative;
@@ -672,13 +670,24 @@ footer {
   }
 
   #cover .cover-nav {
-    display: none;
+    /* display: none; */
 
     text-align: center;
     margin-left: 27%;
     margin-top: 100px;
     position: absolute;
+    z-index: -1;
+  }
 
+  body.menu-open #cover {
+    background: #000;
+    opacity: 0.5;
+    display: block;
+  }
+
+  body.menu-open .cover-nav {
+    display: block;
+    z-index: 1000;
   }
 
   #cover .cover-nav p {
@@ -687,6 +696,10 @@ footer {
     margin-top: 40px;
     font-size: 2rem;
     color: #fff;
+  }
+
+  #show, #hide {
+    cursor: pointer;
   }
 
   #cover .cover-nav h3 {
@@ -739,7 +752,6 @@ footer {
   }
 
   #pull i {
-    font-size: 23px;
     color: #222;
   }
 
