デザイン修正

--- a/style.css
+++ b/style.css
@@ -144,13 +144,14 @@ section {
 }
 
 .home-wrapper {
-  margin-left: 13%;
+  margin-left: 0%;
 }
 
 .kasane {
   position: absolute;
-  bottom: -170px;
+  bottom: -70px;
   opacity: 0.2;
+  z-index: -1;
 }
 
 nav ul {
@@ -200,10 +201,10 @@ nav ul {
 /* header */
 
 header {
-  padding-top: 50px;
+  padding-top: 60px;
   display: flex;
   justify-content: space-between;
-  margin-left: 13%;
+  margin-left: 7%;
   margin-right: 7%;
 }
 
@@ -217,12 +218,15 @@ header {
   transition: 0.3s;
   line-height: 28px;
   letter-spacing: 1px;
+  font-weight: bold;
 }
 
 .header-logo h1 a .sub-logo {
   color: #3b9ded;
   font-size: 1rem;
   letter-spacing: 4px;
+  font-weight: bold;
+
 }
 
 .header-nav nav ul {
@@ -249,6 +253,17 @@ header {
   height: 530px;
 }
 
+.home-content h2 {
+  margin-left: 13%;
+  font-size: 6.1rem;
+  position: absolute;
+  bottom: 0;
+  color: #444;
+  font-weight: bold;
+  letter-spacing: 3px;
+  line-height: 103px;
+}
+
 /* 円のスタイル大樹作 */
 .circle{
   width: 100%;
@@ -267,7 +282,6 @@ header {
 
 .circle2 {
   position: absolute;
-  position: absolute;
   top: 50%;
   left: 50%;
   transform: translateY(-50%) translateX(-50%);
@@ -281,7 +295,7 @@ header {
 }
 
 .circle3 {
-  position: absolute;position: absolute;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translateY(-50%) translateX(-50%);
@@ -290,36 +304,32 @@ header {
   width: 23rem;
   height: 23rem;
   border-radius: 50%; /*角丸*/
-  opacity: 0.8;
   background: #7ac943;
 }
 
-.home-content h2 {
-  font-size: 6.1rem;
-  position: absolute;
-  bottom: 0;
-  color: #444;
-  font-weight: bold;
-  letter-spacing: 3px;
-  line-height: 103px;
+
+/* コンテンツ横幅隠し */
+.over-flow{
+  overflow: scroll;
 }
+
 
 /* news */
 
 .news-wrapper {
-  margin-left: 13%;
+  margin-left: 7%;
   z-index: 2;
 }
 
 .news-title {
   color: #3fa9f5;
-  z-index: 1;
+  z-index: -1;
 }
 
 .news-contents {
   display: flex;
   background-color: #e6e6e6;
-  padding: 40px;
+  padding:40px;
   color: #444;
 }
 
@@ -335,13 +345,13 @@ header {
 /* blog */
 
 .blog-wrapper {
-  margin-left: 13%;
+  margin-left: 7%;
   z-index: 2;
 }
 
 .blog-title {
+  opacity:0.5 ;
   color: #fcee21;
-  z-index: 1;
 }
 
 .blog-contents {
@@ -359,15 +369,18 @@ header {
 /* our service */
 
 .service-wrapper {
-  padding-left: 13%;
   /* background-color: #E6E6E6; */
   z-index: 2;
   /* margin-left: 13%; */
 }
 
+.service-wrapper .title{
+  margin-left: 7%;
+}
+
 .service-title {
   color: #7ac943;
-  z-index: 1;
+  z-index: -1;
 }
 
 .service-contents {
