--- a/style.css
+++ b/style.css
@@ -216,8 +216,12 @@ nav ul {
   font-size: 0.75rem;
 }
 
-#cover {
-  /* display: none; */
+.phone {
+  display: none;
+}
+
+.header-nav nav input {
+  display: none;
 }
 
 
@@ -708,62 +712,9 @@ footer {
   }
 
 
-  #cover {
-    width: 100%;
-    height: 100%;
-    position: relative;
-    top: 0;
-    left: 0;
-    z-index: 100;
-  }
 
-  #cover .cover-nav {
-    /* display: none; */
 
-    text-align: center;
-    margin-left: 27%;
-    margin-top: 100px;
-    position: absolute;
-    z-index: -1;
-  }
 
-  body.menu-open #cover {
-    background: #000;
-    opacity: 0.5;
-    display: block;
-  }
-
-  body.menu-open .cover-nav {
-    display: block;
-    z-index: 1000;
-  }
-
-  #cover .cover-nav p {
-    display: flex;
-    justify-content: flex-end;
-    margin-top: 40px;
-    font-size: 2rem;
-    color: #fff;
-  }
-
-  #show, #hide {
-    cursor: pointer;
-  }
-
-  #cover .cover-nav h3 {
-    font-size: 1.25rem;
-    margin-bottom: 17px;
-    color: #fff;
-  }
-
-  #cover .cover-nav nav ul li {
-    padding: 8px;
-  }
-
-  #cover .cover-nav nav ul li a {
-    font-size: 2rem;
-    color: #fff;
-  }
 
 
 
@@ -789,15 +740,6 @@ footer {
 
   .header-nav nav ul li {
     display: none;
-  }
-
-  #pull {
-    display: block;
-    margin-top: 33%;
-  }
-
-  #pull i {
-    color: #222;
   }
 
   .news-wrapper {
@@ -845,4 +787,107 @@ footer {
     font-size: 0.5rem;
     padding: 4px 0;
   }
+
+
+
+
+
+
+  .phone {
+    display: block;
+  }
+
+  #nav-drawer {
+    position: relative;
+  }
+  
+  /*チェックボックス等は非表示に*/
+  .nav-unshown {
+    display:none;
+  }
+  
+  /*アイコンのスペース*/
+  #nav-open {
+    display: inline-block;
+    width: 30px;
+    height: 22px;
+    vertical-align: middle;
+  }
+  
+  /*ハンバーガーアイコンをCSSだけで表現*/
+  #nav-open span, #nav-open span:before, #nav-open span:after {
+    position: absolute;
+    height: 3px;/*線の太さ*/
+    width: 25px;/*長さ*/
+    border-radius: 3px;
+    background: #555;
+    display: block;
+    content: '';
+    cursor: pointer;
+  }
+  #nav-open span:before {
+    bottom: -8px;
+  }
+  #nav-open span:after {
+    bottom: -16px;
+  }
+  
+  /*閉じる用の薄黒カバー*/
+  #nav-close {
+    display: none;/*はじめは隠しておく*/
+    position: fixed;
+    z-index: 99;
+    top: 0;/*全体に広がるように*/
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: black;
+    opacity: 0;
+    transition: .3s ease-in-out;
+  }
+  
+  /*中身*/
+  #nav-content {
+    overflow: auto;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999;/*最前面に*/
+    width: 90%;/*右側に隙間を作る（閉じるカバーを表示）*/
+    max-width: 250px;/*最大幅（調整してください）*/
+    height: 100%;
+    background: #fff;/*背景色*/
+    transition: .3s ease-in-out;/*滑らかに表示*/
+    -webkit-transform: translateX(-105%);
+    transform: translateX(-105%);/*左に隠しておく*/
+  }
+
+  #nav-content p {
+    color: #333;
+    text-align: center;
+    font-size: 1.25rem;
+    padding: 7px;
+    margin-top: 9px;
+  }
+
+  #nav-content a {
+    color: #333;
+    display: flex;
+    padding: 12px;
+    font-size: 1.5rem;
+  }
+  
+  /*チェックが入ったらもろもろ表示*/
+  #nav-input:checked ~ #nav-close {
+    display: block;/*カバーを表示*/
+    opacity: .5;
+  }
+  
+  #nav-input:checked ~ #nav-content {
+    -webkit-transform: translateX(0%);
+    transform: translateX(0%);/*中身を表示（右へスライド）*/
+    box-shadow: 6px 0 25px rgba(0,0,0,.15);
+  }
+
+  
 }
